Update README.md
more benefits and note about java 21